--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             
             <div class="subheader-icons">
-                <span class="material-icons visibility-icon">content_copy</span>
+                <span class="material-icons content-icon">content_copy</span>
                 <span class="material-icons grid-icon">document_scanner</span>
                 <span class="material-icons bell-icon">notifications</span>
             </div>
